force-app/main/default/objects/Risk_Profile__c/Risk_Profile__c.object-meta.xml
<CustomObject>
    <label>Risk Profile</label>
    <nameField>
        <label>Risk Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>