force-app/main/default/objects/Risk_Profile__c/fields/HighScore__c.field-meta.xml
<CustomField>
    <fullName>HighScore__c</fullName>
    <inlineHelpText>If the total score for a client falls between the Low and High Bands for a &apos;Risk Profile&apos; that profile will be selected.  Scores should not overlap, i.e. If the previous profile has a &apos;High Band&apos; of 10, the &apos;Low Band&apos; of this profile should start at 11.</inlineHelpText>
    <label>High Band</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>